tests/NormalTests/paczka1/fuzzy1/83135379.err
Error in line 11: TA1eySye A732 298,1
Error in line 13: rU8XL A474 34,4
Error in line 2: IWHxB A732 43,5
Error in line 21: IWHxB A474 22,3
Error in line 17: V0IgYk8 S322 52,2
Error in line 24: IWHxB A732 66,8
Error in line 34: IWHxB S322 96,7
Error in line 38: A474 S322 30,1
